rtl.css
/* ... */
.toggle-navigation:focus {
  outline: none;
}

.menu-primary-container {
  position: fixed;
  z-index: 9;
  top: 67px;
  bottom: 0;
  right: 100%;
  width: 100%;
  background: #000;
  opacity: 0;
  visibility: hidden;
  overflow-y: scroll;
  -webkit-overflow-scrolling: touch;
  text-align: right;
  -webkit-transition: opacity 0.35s, visibility 0.35s, -webkit-transform 0.25s;
  transition: opacity 0.35s, visibility 0.35s, transform 0.25s;
}

.admin-bar .menu-primary-container {
  top: 113px;
}

.menu-primary {
  padding: 0 5.556%;
  -webkit-transition: -webkit-transform 0.25s;
  transition: transform 0.25s;
}

.menu-primary-items,
.menu-unset ul {
  list-style: none;
  margin: 0;
}
.menu-primary-items:after,
.menu-unset ul:after {
  content: ".";
  display: block;
  clear: both;
  visibility: hidden;
  line-height: 0;
  height: 0;
}
.menu-primary-items li,
.menu-unset ul li {
  position: relative;
  border-bottom: solid 1px #262626;
}
.menu-primary-items li.current-menu-item > a, .menu-primary-items li.current-menu-ancestor > a,
.menu-unset ul li.current-menu-item > a,
.menu-unset ul li.current-menu-ancestor > a {
  text-decoration: underline;
}
.menu-primary-items a,
.menu-unset ul a {
  display: block;
  font-family: "PT Sans", sans-serif;
  padding: 15px 0;
  -webkit-transition: color 0.15s;
  transition: color 0.15s;
}
.menu-primary-items a:hover, .menu-primary-items a:active, .menu-primary-items a:focus,
.menu-unset ul a:hover,
.menu-unset ul a:active,
.menu-unset ul a:focus {
  color: #DCDCDC;
}
.menu-primary-items ul,
.menu-unset ul ul {
  position: fixed;
  top: -12px;
  right: 100%;
  width: 100%;
  list-style: none;
  margin: 0;
  padding: 0 5.556%;
  opacity: 0;
  visibility: hidden;
  -webkit-transition: opacity 0.35s, visibility 0.35s;
  transition: opacity 0.35s, visibility 0.35s;
}
.menu-primary-items ul ul,
.menu-unset ul ul ul {
  right: 200%;
}
.menu-primary-items ul ul ul,
.menu-unset ul ul ul ul {
  right: 300%;
}
.menu-primary-items ul ul ul ul,
.menu-unset ul ul ul ul ul {
  right: 400%;
}
.menu-primary-items ul ul ul ul ul,
.menu-unset ul ul ul ul ul ul {
  right: 500%;
}

.toggle-dropdown {
  position: absolute;
  left: 0;
  top: -1px;
  color: #fff;
  background: none;
  margin: 0;
  padding: 15px 5.556%;
  border: solid 1px #262626;
  border-radius: 0;
  -webkit-transition: color 0.15s, background 0.15s;
  transition: color 0.15s, background 0.15s;
}
.toggle-dropdown:hover {
  cursor: pointer;
}
.toggle-dropdown:focus {
  outline: none;
}
.toggle-dropdown:hover, .toggle-dropdown:active, .toggle-dropdown:focus {
  color: #DCDCDC;
  background: #000;
}

.rtl .toggle-dropdown i {
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

.dropdown-navigation {
  position: relative;
  z-index: 39;
  opacity: 0;
  visibility: hidden;
  font-family: "PT Sans", sans-serif;
  color: #fff;
  text-align: right;
  border-bottom: solid 1px #262626;
  -webkit-transition: opacity 0.35s, visibility 0.35s;
  transition: opacity 0.35s, visibility 0.35s;
}
.dropdown-navigation:after {
  content: ".";
  display: block;
  clear: both;
  visibility: hidden;
  line-height: 0;
  height: 0;
}
.dropdown-navigation a {
  font-weight: 700;
  float: right;
  display: block;
  padding: 0.75em 5.556%;
}
.dropdown-navigation span {
  font-weight: 700;
  float: left;
  padding: 0.75em 5.556%;
  color: #999999;
}

.rtl .dropdown-navigation i {
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

.menu-primary-items {
  position: relative;
  top: -42px;
}
/* ... */

